# Flox

./: .env.example  .env.production  .replit  .replit.dev  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  START_ME.md  Uvicorn_Start.sh  asgi.py  docker-compose.yml  gunicorn_conf.py  init_db.py  lint.sh  main.py  main_uvicorn.py  new_workflow_command.txt  prestart.sh  production_server.sh  pyproject.toml  replit.nix  run_dev_server.sh  run_server.py  run_uvicorn.py  run_uvicorn_server.sh  server.py  simple_server.py  start.sh  start_server.sh  start_uvicorn.sh  start_uvicorn_alt.sh  test_api.py  test_authentication.py  test_authentication_alt.py  update_schemas.py  updated_workflow_command.txt  uvicorn_workflow_command.txt  websocket_client_test.py  websocket_test.html  (+2 more)
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/core/: __init__.py  cache.py  config.py  security.py
app/db/: base.py  base_class.py  (+1 more)
attached_assets/: Pasted-Develop-the-backend-for-a-self-hosted-SaaS-version-of-OneTask-an-AI-powered-to-do-application-desig-1742660776165.txt  Pasted-Develop-the-backend-for-a-self-hosted-SaaS-version-of-OneTask-an-AI-powered-to-do-application-desig-1742680864834.txt
docs/: README.md  api-details.md  auth-implementation.md  authentication.md  deployment-guide.md  developer-guide.md  docker-deployment-guide.md  frontend-connection-guide.md  integration-guide.md  simple-self-hosting-guide.md  websocket_api.md  websocket_integration.md
public/: api-config.js  api_connection_test.html  websocket-client.js  websocket_test.html
tests/: conftest.py
(+63 files in other folders)
